# Alloy-ios

./: .gitignore  Cargo.toml  Makefile  README.md  control
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ui-memory-example.md  ui.md
src/: config.rs  entry.rs  lib.rs
src/memory/: hook.rs  patch.rs  rw.rs
src/memory/allocation/: shellcode.rs
src/memory/ffi/: mach_exc.rs
src/memory/info/: code_cave.rs  image.rs  protection.rs  scan.rs
src/memory/manipulation/: checksum.rs  hook.rs  patch.rs  rw.rs
src/memory/platform/: breakpoint.rs  thread.rs
src/ui/: components.rs  menu.rs  mod.rs  pref.rs  theme.rs  window.rs
src/ui/assets/: icons.rs
src/ui/components/: file_picker.rs  floating.rs  mod.rs  toast.rs  widgets.rs
src/ui/menu/: handler.rs  items.rs  mod.rs  registry.rs  utils.rs  view.rs
src/ui/utils/: animations.rs  delegate.rs  feedback.rs  mod.rs  wrappers.rs
src/utils/: logger.rs  macros.rs  mod.rs
