[package]
name = "alloy"
version = "1.0.0"
edition = "2021"

[lib]
name = "alloy"
crate-type = ["staticlib"]

[dependencies]
libc = "0.2"
ctor = "0.6"
mach2 = "0.6"
log = "0.4"
oslog = "0.2"
once_cell = "1.18"
parking_lot = "0.12"
thiserror = "2.0"
hex = "0.4"
jit-assembler = "0.3"
rustc-hash = "2.0"
dashmap = "6.0"
glam = "0.31"
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-foundation = "0.3"
objc2-ui-kit = "0.3"
objc2-quartz-core = "0.3"
objc2-core-graphics = "0.3"
paste = "1.0.15"
block2 = "0.6"
dispatch = "0.2.0"
zip = "7.4.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev-release]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
panic = "abort"
strip = false
incremental = true
